fix: update URLs to point to the new domain for Open Graph and Twitter metadata

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://angearsene.github.io/portfolio-app/">
+    <meta property="og:url" content="https://ange-arsene.is-a.dev">
     <meta property="og:site_name" content="Ange Arsène Portfolio Website">
     <meta property="og:title" content="Ange Arsène - Full-Stack Developer | Laravel + React + WordPress">
     <meta property="og:description" content="Full-Stack Developer with 3+ years experience in WordPress, Laravel, React.js, and automation. Expert in API integrations, WhatsApp automation, and scalable web applications. Contact: +237699512438, nkenmandenga@gmail.com">
@@ -26,13 +26,13 @@
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://angearsene.github.io/portfolio-app/">
+    <meta property="twitter:url" content="https://ange-arsene.is-a.dev">
     <meta property="twitter:title" content="Ange Arsène - Full-Stack Developer | Laravel + React + WordPress">
     <meta property="twitter:description" content="Full-Stack Developer with 3+ years experience in WordPress, Laravel, React.js, and automation. Expert in API integrations, WhatsApp automation, and scalable web applications. Contact: +237699512438, nkenmandenga@gmail.com">
     <meta property="twitter:image" content="https://images.unsplash.com/photo-1555066931-4365d14bab8c?auto=format&fit=crop&w=1200&h=630">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://angearsene.github.io/portfolio-app/" />
+    <link rel="canonical" href="https://ange-arsene.is-a.dev" />
   </head>
   <body>
     <div id="root"></div>
@@ -45,11 +45,11 @@
         "alternateName": "Ange Arsène",
         "telephone": "+237699512438",
         "email": "nkenmandenga@gmail.com",
-        "url": "https://angearsene.github.io/portfolio-app/",
+        "url": "https://ange-arsene.is-a.dev",
         "sameAs": [
           "https://github.com/AngeArsene",
           "https://www.linkedin.com/in/ange-arsene-nken-mandeng-58895827a/",
-          "https://angearsene.github.io/portfolio-app/"
+          "https://ange-arsene.is-a.dev"
         ],
         "jobTitle": "Full-Stack Developer | Laravel + React + WordPress",
         "worksFor": {
